# stride

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: 001_initialize_schema.down.sql  001_initialize_schema.up.sql  002_add_summary.up.sql
stride/: api.py  app.py  dao.py  domain.py  logger.py  types.py
stride/agent/: __init__.py  agent.py  prompts.py  types.py
stride/api/: __init__.py  activities.py  chat.py  schemas.py
stride/dao/: connections.py  influx.py  postgres.py
stride/domain/: __init__.py  activities.py  chat.py  commons.py  dao.py  domain.py  health.py  pace.py  schemas.py  types.py
stride/domain/activities/: __init__.py  api.py  dao.py  schemas.py  service.py
stride/domain/chat/: api.py  dao.py  schemas.py  service.py  tasks.py
stride/domain/common/: schemas.py
stride/domain/health/: api.py  dao.py  schemas.py  service.py
stride/domain/pace/: __init__.py  api.py  dao.py  schemas.py  service.py
stride/infra/: influx.py  postgres.py
stride/mcp/: __init__.py  mcp.py  schemas.py
stride/ui/: __init__.py  router.py
stride/ui/static/css/: activities.css  activity_details.css  base.css  home.css
stride/ui/static/js/: activities.js  activity_details.js  base.js  home.js  monthly_summary.js
stride/ui/templates/: activities.html  activity_details.html  base.html  home.html  monthly_summary.html
templates/: activities.html  activity_details.html  base.html  home.html  index.html  progress.html
