[project]
name = "garmin-reports"
version = "0.1.0"
description = "Simple api to extract garmin data informations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "click>=8.3.1",
    "fastapi>=0.124.4",
    "influxdb>=5.3.2",
    "loguru>=0.7.3",
    "polars>=1.35.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
